# master

./: .dockerignore  .env  .env.example  .env.railway.template  .env.rama  .env.universal  .env.v2  .env.v3  .gitignore  .railwayignore  ANALISIS_VIRAL_RESUMEN.md  API_KEYS_NEEDED.md  APPLY_BRANCH_SUMMARY.md  BEST_PRACTICES_ANALYSIS.md  BRANCH_STRUCTURE.md  BRANCH_SYSTEM_ARCHITECTURE.md  CAPACIDADES_REDES_SOCIALES.md  CHANGELOG.md  CHECKPOINT_RESTORATION_REPORT.txt  COMMIT_MESSAGE.txt  COMPLETION_REPORT.md  DASHBOARD_ACCESS.md  DEPLOYMENT_GUIDE.md  DEPLOY_CLOUD_V3.md  DEVELOPMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOY_README.md  DOCKER_README.md  DOCKER_V2_COMPLETE_GUIDE.md  DOCKER_V3_DEPLOYMENT.md  DOCKER_V3_README.md  DOCKER_V3_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.completo  Dockerfile.device-farm-v5-integration  Dockerfile.feature-meta-cbo-campaigns  Dockerfile.feature-ml-optimization  Dockerfile.lightweight  Dockerfile.main  (+182 more)
.github/: copilot-instructions.md
config/: app_settings.py  bandwidth_optimization.py  dependency_manager.py  env_template_railway_production.txt  meta_ml_config.json  production_config.py  redis.conf  telegram_like4like_config.json
data/: utm_tracking.db  viral_study_stakas_mvp.json
database/: init.sql  minimal_schema.sql  seed_data.sql  supabase_schema.sql
device_farm_v5/: Dockerfile  README.md  demo_yolo_integration.py  deploy-device-farm-v5.ps1  docker-compose.dev.yml  docker-compose.yml  requirements-ml.txt  requirements.txt
docker/: .env.example  Dockerfile.dashboard  Dockerfile.device-farm  nginx.conf  (+17 more)
(+409 files in other folders)
